--- a/loans/JenkinsFile
+++ b/loans/JenkinsFile
@@ -14,7 +14,7 @@ pipeline {
     stages {
         stage('Checkout Code') {
             steps {
-                git branch: 'main', url: 'https://github.com/NILAYRAVAL/Loan_Project.git'
+                git branch: 'main', url: 'https://github.com/NILAYRAVAL/Loan_Project/tree/JenkinsFile'
             }
         }
 
